--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         major_pattern: "major:"
         minor_pattern: "feat:"
-        format: "${major}.${minor}.${patch}-prerelease${increment}"
+        format: "${major}.${minor}.${increment}"
       id: version
         
 
@@ -32,16 +32,18 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
-      run: echo "Version $NEW_VERSION"
-#       run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     
-#     - name: Build image
-#       run: | 
-#         docker build -t alejobonadeo/docker-deploy-test:0.0.2 .
-#         docker build -t alejobonadeo/docker-deploy-test:latest .
+    - name: Build image
+      env: 
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: | 
+        docker build -t alejobonadeo/docker-deploy-test:$NEW_VERSION .
+        docker build -t alejobonadeo/docker-deploy-test:latest .
 
-#     - name: Push image
-#       run: | 
-#         docker push alejobonadeo/docker-deploy-test:0.0.2
-#         docker push alejobonadeo/docker-deploy-test:latest
+    - name: Push image
+      env: 
+          NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: | 
+        docker push alejobonadeo/docker-deploy-test:$NEW_VERSION
+        docker push alejobonadeo/docker-deploy-test:latest
